# fiber-demo

./: .gitignore  AGENTS.md  GEMINI.md  README.md
docs/: e2e-test-flow.md  escrow-e2e-test-flow.md
docs/plans/: 2026-02-16-decentralized-preimage-game-design.md  2026-02-17-fiber-escrow-design.md  2026-02-17-fiber-escrow-implementation.md  2026-02-17-implementation-design.md  2026-02-19-escrow-fiber-integration.md
fiber-core/: Cargo.toml
fiber-core/src/: lib.rs
fiber-core/src/crypto/: mod.rs  payment.rs
fiber-core/src/fiber/: mock.rs  mod.rs  rpc.rs  traits.rs
fiber-escrow/: Cargo.toml  README.md
fiber-escrow/crates/fiber-escrow-service/: Cargo.toml
fiber-escrow/crates/fiber-escrow-service/src/: handlers.rs  main.rs  models.rs  state.rs
fiber-escrow/crates/fiber-escrow-service/static/: index.html
fiber-escrow/crates/fiber-escrow-service/tests/: e2e_escrow_flow.rs
fiber-game/: Cargo.toml  README.md
fiber-game/crates/fiber-game-core/: Cargo.toml
fiber-game/crates/fiber-game-core/src/: lib.rs
fiber-game/crates/fiber-game-core/src/crypto/: commitment.rs  encrypted_preimage.rs  mod.rs  signature_point.rs
fiber-game/crates/fiber-game-core/src/fiber/: mock.rs  mod.rs
fiber-game/crates/fiber-game-core/src/games/: guess_number.rs  mod.rs  rps.rs  traits.rs
fiber-game/crates/fiber-game-core/src/protocol/: messages.rs  mod.rs  types.rs
fiber-game/crates/fiber-game-core/tests/: e2e_game_flow.rs  full_game_flow.rs
fiber-game/crates/fiber-game-demo/: Cargo.toml
fiber-game/crates/fiber-game-demo/src/: main.rs
fiber-game/crates/fiber-game-demo/static/: index.html
fiber-game/crates/fiber-game-demo/static/player-a/: index.html
fiber-game/crates/fiber-game-demo/static/player-b/: index.html
fiber-game/crates/fiber-game-oracle/: Cargo.toml
fiber-game/crates/fiber-game-oracle/src/: main.rs
fiber-game/crates/fiber-game-player/: Cargo.toml
fiber-game/crates/fiber-game-player/src/: main.rs
fiber-game/crates/fiber-game-player/static/: index.html
fiber-game/tests/: full_game_flow.rs
scripts/: setup-fiber-testnet.sh
