[workspace]
members = [
    "crates/fiber-game-core",
    "crates/fiber-game-oracle",
    "crates/fiber-game-player",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Fiber Game Team"]

[workspace.dependencies]
# Crypto
secp256k1 = { version = "0.29", features = ["rand-std", "hashes", "global-context"] }
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Async
tokio = { version = "1", features = ["full"] }

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
fiber-game-core = { path = "crates/fiber-game-core" }
