[package]
name = "fiber-escrow-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Fiber Escrow Service with multi-role Web UI"

[dependencies]
fiber-core = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
