[package]
name = "fiber-game-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Oracle HTTP service for Fiber Game protocol"

[dependencies]
fiber-game-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
